Changes
=======

1.14.0 (unreleased)
-------------------

- Make package comply to zope.org repository policy.

- Update tests not to require zope.app.testing anymore.

- Update tsets not to require zope.app.zcmlfiles anymore.


1.13.2 (2010-01-09)
-------------------

- Require zope.login.

- Require newer versions of zope.app.exception and zope.app.pagetemplate
  addressing launchpad issue 499633.


1.13.1 (2009-12-15)
-------------------

- Removed duplicate 'tests_require' from setup.py that prevented installation.


1.13 (2009-12-13)
-----------------

- Added missing dependencies in setup.py (copied from trunk).


1.13a2 (2009-11-27)
-------------------

- Factor out generally useful methods and properties for view-ish
  components into components.ViewSupport mixin.


1.13a1 (2009-11-15)
-------------------

- Use zope.container instead of deprecated zope.app.container, use zope.site
  instead of zope.app.folder.

- Some imports have been modified, to avoid deprecation warnings,
  while using ZTK 1.0dev. [trollfot]

- Added support for ZTK 1.0dev. This was possible by changing
  slightly the DirectoryResource implementation. The DirectoryResource
  now uses `zope.browserresource` where DirectoryResourceFactory's factories
  are no longer a class-level dict entry but utilities. [trollfot]


1.12.2 (2009-09-17)
-------------------

- Test fix: support windows paths.

1.12.1 (2009-09-17)
-------------------

- A compatibility fix to support ``grokcore.viewlet``.

1.12 (2009-09-17)
-----------------

- Use 1.0b1 versions.cfg in Grok's release info instead of a local
  copy; a local copy for all grokcore packages is just too hard to
  maintain.

- Revert the splitting CodeView/View. The original reasons for the
  split have been obsoleted by the recent martain developments
  regarding inheritted module level directives. At the same time the
  split up components proved cumbersome to use and a too big a change
  between the 1.0a and 1.0b releases of Grok.
