@@ -1,19 +1,22 @@
 """
 Inline templates that are not associated with a view class will
-provoke an error:
+provoke a log message on warning level to ``grokcore.view`` logger:
 
-  >>> from grokcore.view.testing import warn
-  >>> import warnings
-  >>> saved_warn = warnings.warn
-  >>> warnings.warn = warn
+  >>> from zope.testing.loggingsupport import InstalledHandler
+  >>> handler = InstalledHandler('grokcore.view')
+  >>> handler.clear() # Make sure there are no old msgs stored...
 
   >>> grok.testing.grok(__name__)
-  From grok.testing's warn():
-  ...UserWarning: Found the following unassociated template(s) when grokking
-  'grokcore.view.tests.view.inline_unassociated': club. Define view classes inheriting
-  from grok.View to enable the template(s)...
+  >>> print handler
+  grokcore.view WARNING
+      Found the following unassociated template(s) when grokking
+      'grokcore.view.tests.view.inline_unassociated': club.  Define
+      view classes inheriting from grok.View to enable the
+      template(s).
 
-  >>> warnings.warn = saved_warn
+Restore logging machinery:
+
+  >>> handler.uninstall()
 
 """
 import grokcore.view as grok
